--- a/gradle/compose.versions.toml
+++ b/gradle/compose.versions.toml
@@ -11,6 +11,7 @@ animation = { module = "androidx.compose.animation:animation" }
 animation-graphics = { module = "androidx.compose.animation:animation-graphics" }
 ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 ui-util = { module = "androidx.compose.ui:ui-util" }
+composeUi = "androidx.compose.ui:ui:1.3.2"
 
 material2-core = { module = "androidx.compose.material:material" }
 material3-core = { module = "androidx.compose.material3:material3" }
